--- a/Pratica/Random Password Generator/style.css
+++ b/Pratica/Random Password Generator/style.css
@@ -1,11 +1,14 @@
 *
 {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+    font-family: "consolas";
 }
-
+body
+{
+   /*user-select: none;*/
+}
 div.container
 {
-    background: gray;
+    background: rgb(248, 248, 248);
     position: relative;
     align-items: center;
     justify-content: center;
@@ -28,27 +31,33 @@ input
     box-sizing: border-box;
     width: 100%;
     height: 20%;
-    font-size: 400%;
+    font-size: 300%;
     border-radius: 20px;
     padding: 10px;
     padding-right: 80px;
-    background-color: gray;
+    padding-left: 20px;
+    background-color: transparent;
+    letter-spacing: 10px;
     border: none;
-    box-shadow: inset 1px 1px 10px rgba(0, 0, 0, 0.2),
-                1px 1px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: -5px -5px 10px rgba(255, 255, 255, 0.5),
+                inset 5px 5px 10px rgba(0, 0, 0, 0.1),
+                inset -5px -5px 10px rgba(255, 255, 255, 0.5),
+                5px 5px 10px rgba(0, 0, 0, 0.1);
+                
     outline: none;
     cursor: default;
 }
 input::placeholder
 {
     color: #999999;
+    letter-spacing: 0px;
 }
 img
 {
     position: absolute;
     transform: scale(0.3);
     right: -30px;
-    top: 95px;
+    top: 88px;
     cursor: pointer;
     transition: 0.5s;
 }
@@ -69,14 +78,15 @@ button
     border-radius: 20px;
     outline: none;
     color: white;
-    font-size: 40px;
+    font-size: 30px;
     transition: 0.7s;
     border: 2px solid white;
     cursor: pointer;
 }
-button:hover
+button:active
 {
     filter: invert();
+    transition: 0.1s;
 }
 
 footer
