--- a/Pratica/Random Password Generator/style.css
+++ b/Pratica/Random Password Generator/style.css
@@ -20,6 +20,7 @@ div.container
     height: 500px;
     border: 5px solid black;
     margin-top: 50px;
+    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.3);
 }
 h1
 {
