--- a/Estudos/HTML/CeV HTML e CSS/projeto-glass-html5/_css/estilo.css
+++ b/Estudos/HTML/CeV HTML e CSS/projeto-glass-html5/_css/estilo.css
@@ -8,6 +8,7 @@
 body
 {
     background-color: #dddddd;
+    font-family: Arial, Helvetica, sans-serif;
 }
 table#specs
 {
@@ -21,12 +22,38 @@ table#specs td
     border: 1px solid #606060;
     padding: 5px;
     text-align: center;
+    vertical-align: middle;
+}
+
+table#specs td.tipo
+{
+    color: white;
+    background: #606060;
     vertical-align: top;
+    font-weight: bold;
+}
+
+table#specs td.info
+{
+    background-color: #cecece;
+
 }
 table#specs caption
 {
+    color: #888888;
+    font-size: 13pt;
+    font-weight: bold;
     border: 2px solid #606060;
+    border-bottom: none;
     padding: 5px;
+}
+table#specs caption span
+{
+    display: block;
+    float: right;
+    color: black;
+    font-size: 8pt;
+    margin-top: 10px;
 }
 
 div#interface
@@ -34,7 +61,7 @@ div#interface
     width: 800px;
     background-color: white;
     margin: 10px auto 10px auto;
-    padding: 10px;
+    padding: 15px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 }
 p
@@ -42,6 +69,53 @@ p
     text-align: justify;
     text-indent: 30px; 
 }
+a
+{
+    color: #606060;
+    text-decoration: none;
+}
+a:hover
+{
+    text-decoration: underline;
+}
+
+
+
+article#principal h2
+{
+    font-size: 12pt;
+    color: #606060;
+    background: #dddddd;
+    padding: 5px 0px 5px 10px;
+    margin: 10px 0px 10px 0px;
+}
+header#header-artigo h1
+{
+    font-family: 'FontLogo', sans-serif;
+    font-size: 20pt;
+    color: #606060;
+    margin: 0;
+}
+header#header-artigo h2
+{
+    font-size: 13pt;
+    color: #cecece;
+    background: none;
+    margin: 0;
+}
+header#header-artigo h3
+{
+    font-size: 10pt;
+    color: #606060;
+    background: none;
+    margin: 0;
+}
+.direita
+{
+    text-align: right;
+}
+
+
 
 
 header#header img#icone
@@ -150,7 +224,7 @@ nav#menu li:hover a
 section#corpo
 {
     display: block;
-    width: 450px;
+    width: 440px;
     float: left;
     border-right: 1px #606060 solid;
     padding-right: 15px;
@@ -160,7 +234,29 @@ aside#lateral
     display: block;
     width: 320px;
     float: right;
+    background-color: #dddddd;
+    padding: 8px;
+    margin-top: 10px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
+
+aside#lateral h1
+{
+    font-family: 'FontLogo', sans-serif;
+    font-size: 20pt;
+    color: #606060;
+    margin-top: 0px;
+
+}
+aside#lateral h2
+{
+    font-size: 13pt;
+    color: white;
+    background: #606060;
+    padding: 5px;
+}
+
+
 footer#rodape
 {
     clear: both;
@@ -170,9 +266,4 @@ footer#rodape
 footer#rodape p
 {
     text-align: center;
-}
-footer#rodape a
-{
-    text-decoration: none;
-
 }
